make sure subtitle is not covered

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -448,6 +448,7 @@ div#avatar img {
 }
 
 #river_player #subtitle_display {
+  white-space: normal;
   padding: 5px;
   margin-bottom: 0px;
   font-size: 18px;
